--- a/src/index.jade
+++ b/src/index.jade
@@ -23,7 +23,9 @@ html
     // Elsie 2.0
     script(src="js/templates.js",charset="utf-8")
     script(src="js/elsie.js",charset="utf-8")
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons",rel="stylesheet")
     link(rel="stylesheet", href="css/app.css")
+
   body(ng-app="elsie")
     div(layout="column",layout-fill,ng-controller="AppCtrl")
       md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id="menu")
