--- a/src/elsie.core/styles/home.scss
+++ b/src/elsie.core/styles/home.scss
@@ -24,11 +24,12 @@
     }
     md-list-item {
       background-color: white;
-      box-shadow: $box-shadow;
+      border-bottom: 1px $border-bottom;
     }
     overflow-y: auto;
   }
   .explore-trigger {
+    outline: none;
     position: absolute;
     bottom: 30px;
     width: 200px;
@@ -48,7 +49,7 @@
     max-height: none;
     background-color: $cream;
     color: $pink;
-    box-shadow: 0 0 50px rgba(34, 34, 34, 0.24);
+    //box-shadow: 0 0 50px rgba(34, 34, 34, 0.24);
     padding-bottom: 20px;
   }
   .search {
@@ -62,7 +63,8 @@
       border: none;
       border-radius: 0;
       -webkit-appearance: none;
-      box-shadow: $box-shadow;
+      // box-shadow: $box-shadow;
+      border-bottom: 1px $border-bottom;
       font-size: 0.9em;
       display: block;
       padding: 12px 15px;
@@ -86,7 +88,6 @@
       border-radius: 0;
       min-height: 0;
       padding: 0;
-      display: block !important;
       position: absolute;
       z-index: 200;
       top: 4px;
