--- a/src/elsie.common/styles/master.scss
+++ b/src/elsie.common/styles/master.scss
@@ -231,6 +231,51 @@ md-icon.md-default-theme {
   }
 }
 
+md-bottom-sheet {
+  &.md-grid {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .md-inline-list-icon-label {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: -10px;
+    height: 24px;
+    vertical-align: middle;
+  }
+  .md-grid-item-content {
+    height: 96px;
+  }
+  .md-grid-item-content img.md-avatar {
+    height: 48px;
+    width: 48px;
+    border-radius: 100px;
+    margin-top: 10px;
+    margin-bottom: -10px
+  }
+  .md-grid-text {
+    padding-bottom: 5px;
+  }
+  h5 {
+    color: grey;
+    font-weight: 400;
+    margin: 20px 0 10px 20px;
+  }
+  md-virtual-repeat-container {
+    width: 100%;
+    height: 100px;
+    .item {
+      box-sizing: border-box;
+      display: inline-block;
+      height: 100px;
+      padding-top: 10px;
+      text-align: center;
+      width: 100px;
+    }
+  }
+}
+
 md-list.standalone {
   margin-top: 1em;
   background-color: none;
