update: suggestions ui

--- a/src/elsie.common/templates/action-bar.jade
+++ b/src/elsie.common/templates/action-bar.jade
@@ -7,8 +7,10 @@ md-toolbar(class="action-bar {{ theme }}",ng-show="show")
     h2(ng-class="{ visible: set.title }",ng-hide="search")
       span(ng-if="set.title") {{ set.title }}
     img.elsie-logo.md-avatar(ng-class="{ visible: set.logo }",src="img/logo_white.png")
-    md-button.md-icon-button.right-button.right-button-2(ng-click="go('watchlist')", ng-class="{ visible: set.locating }")
+    md-button.md-icon-button.right-button.right-button-2(ng-class="{ visible: set.locating }")
       md-icon location_searching
+    md-button.md-icon-button.right-button(ng-click="go('suggestions')", ng-class="{ visible: set.watchlist }")
+      md-icon notifications
     md-button.md-icon-button.right-button(ng-click="go('watchlist')", ng-class="{ visible: set.watchlist }")
       md-icon favorite
     md-button.md-icon-button.right-button(ng-click="refreshWatchlist()", ng-class="{ visible: set.watchlistRefresh }")
