--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -19,7 +19,7 @@ doctype
             img.watchlist-image(src="img/watchlist.png")
             p.message {{ error.data }}
             md-button.md-primary(ng-click="go('welcome')") Okay
-      md-tab(label="Sent",md-on-select="modeSelect(1)")
+      md-tab(label="Outbox",md-on-select="modeSelect(1)")
         md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!outbox && session || loading")
         md-list.standalone(ng-show="outbox && outbox.length > 0 || !loading")
           md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="product in outbox",ng-click="loadProduct(product)")
