--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -6,14 +6,14 @@ doctype
         md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!inbox && session || loading")
         md-list.standalone(ng-show="inbox && inbox.length > 0 || !loading")
           md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="product in inbox",ng-click="loadProduct(product)")
-            img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+            img.md-avatar(ng-src="{{ product.pick.image_thumb_url }}")
             .md-list-item-text
-                h3 {{ product.name }}
+                h3 {{ product.pick.name }}
                 p 
-                  | {{ product.producer_name }}
+                  | {{ product.pick.producer_name }}
                   br
-                  span {{ product.secondary_category }} &#183; {{ product.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;{{ product.inventory_count | pretty }} units
+                  span {{ product.pick.secondary_category }} &#183; {{ product.pick.alcohol_content | percentage }} &#183;
+                  span.accent &nbsp;Recommended by {{ product.creator_details.firstName }}
         .full(layout="column", ng-show="error || !session || inbox && inbox.length === 0 && !error && session",layout-align="center center")
           div(flex,ng-if="error",layout="column", layout-align="center center")
             img.watchlist-image(src="img/watchlist.png")
@@ -23,14 +23,14 @@ doctype
         md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!outbox && session || loading")
         md-list.standalone(ng-show="outbox && outbox.length > 0 || !loading")
           md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="product in outbox",ng-click="loadProduct(product)")
-            img.md-avatar(ng-src="{{ product.image_thumb_url }}")
+            img.md-avatar(ng-src="{{ product.pick.image_thumb_url }}")
             .md-list-item-text
-                h3 {{ product.name }}
+                h3 {{ product.pick.name }}
                 p 
-                  | {{ product.producer_name }}
+                  | {{ product.pick.producer_name }}
                   br
-                  span {{ product.secondary_category }} &#183; {{ product.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;{{ product.inventory_count | pretty }} units
+                  span {{ product.pick.secondary_category }} &#183; {{ product.pick.alcohol_content | percentage }} &#183;
+                  span.accent &nbsp;{{ product.pick.inventory_count | pretty }} units
         .full(layout="column", ng-show="error || !session || outbox && outbox.length === 0 && !error && session",layout-align="center center")
           div(flex,ng-if="error",layout="column", layout-align="center center")
             img.watchlist-image(src="img/watchlist.png")
