--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -30,7 +30,7 @@ doctype
                   | {{ product.pick.producer_name }}
                   br
                   span {{ product.pick.secondary_category }} &#183; {{ product.pick.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;{{ product.pick.inventory_count | pretty }} units
+                  span.accent &nbsp;Recommended by {{ product.creator_details.firstName }}
         .full(layout="column", ng-show="error || !session || outbox && outbox.length === 0 && !error && session",layout-align="center center")
           div(flex,ng-if="error",layout="column", layout-align="center center")
             img.watchlist-image(src="img/watchlist.png")
