--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -5,15 +5,15 @@ doctype
       md-tab(label="Inbox",md-on-select="modeSelect(0)")
         md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!inbox && session || loading")
         md-list.standalone(ng-show="inbox && inbox.length > 0 || !loading")
-          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="product in inbox",ng-click="loadProduct(product)")
-            img.md-avatar(ng-src="{{ product.pick.image_thumb_url }}")
+          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in inbox",ng-click="loadProduct(suggestion.product)")
+            img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
             .md-list-item-text
-                h3 {{ product.pick.name }}
+                h3 {{ suggestion.product.name }}
                 p 
-                  | {{ product.pick.producer_name }}
+                  | {{ suggestion.product.producer_name }}
                   br
-                  span {{ product.pick.secondary_category }} &#183; {{ product.pick.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;Recommended by {{ product.creator_details.firstName }}
+                  span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
+                  span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
         .full(layout="column", ng-show="error || !session || inbox && inbox.length === 0 && !error && session",layout-align="center center")
           div(flex,ng-if="error",layout="column", layout-align="center center")
             img.watchlist-image(src="img/watchlist.png")
@@ -22,15 +22,15 @@ doctype
       md-tab(label="Sent",md-on-select="modeSelect(1)")
         md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!outbox && session || loading")
         md-list.standalone(ng-show="outbox && outbox.length > 0 || !loading")
-          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="product in outbox",ng-click="loadProduct(product)")
-            img.md-avatar(ng-src="{{ product.pick.image_thumb_url }}")
+          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in outbox",ng-click="loadProduct(suggestion.product)")
+            img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
             .md-list-item-text
-                h3 {{ product.pick.name }}
+                h3 {{ suggestion.product.name }}
                 p 
-                  | {{ product.pick.producer_name }}
+                  | {{ suggestion.product.producer_name }}
                   br
-                  span {{ product.pick.secondary_category }} &#183; {{ product.pick.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;Recommended by {{ product.creator_details.firstName }}
+                  span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
+                  span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
         .full(layout="column", ng-show="error || !session || outbox && outbox.length === 0 && !error && session",layout-align="center center")
           div(flex,ng-if="error",layout="column", layout-align="center center")
             img.watchlist-image(src="img/watchlist.png")
