--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -1,38 +1,42 @@
 doctype
 .watchlist
   md-content
-    md-tabs#tabs(md-stretch-tabs="always",md-selected="suggestions.mode",ng-style="tabsStyle")
-      md-tab(label="Inbox",md-on-select="modeSelect(0)")
-        md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!inbox && session || loading")
-        md-list.standalone(ng-show="inbox && inbox.length > 0 || !loading")
-          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in inbox",ng-click="loadProduct(suggestion.product)")
-            img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
-            .md-list-item-text
-                h3 {{ suggestion.product.name }}
-                p 
-                  | {{ suggestion.product.producer_name }}
-                  br
-                  span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
-        .full(layout="column", ng-show="error || !session || inbox && inbox.length === 0 && !error && session",layout-align="center center")
-          div(flex,ng-if="error",layout="column", layout-align="center center")
-            img.watchlist-image(src="img/watchlist.png")
-            p.message {{ error.data }}
-            md-button.md-primary(ng-click="go('welcome')") Okay
-      md-tab(label="Sent",md-on-select="modeSelect(1)")
-        md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!outbox && session || loading")
-        md-list.standalone(ng-show="outbox && outbox.length > 0 || !loading")
-          md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in outbox",ng-click="loadProduct(suggestion.product)")
-            img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
-            .md-list-item-text
-                h3 {{ suggestion.product.name }}
-                p 
-                  | {{ suggestion.product.producer_name }}
-                  br
-                  span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
-                  span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
-        .full(layout="column", ng-show="error || !session || outbox && outbox.length === 0 && !error && session",layout-align="center center")
-          div(flex,ng-if="error",layout="column", layout-align="center center")
-            img.watchlist-image(src="img/watchlist.png")
-            p.message {{ error.data }}
-            md-button.md-primary(ng-click="go('welcome')") Okay
+    md-tabs#tabs(md-stretch-tabs="always",ng-style="tabsStyle")
+      md-tab(md-on-select="modeSelect(0)")
+        md-tab-label Inbox
+        md-tab-body
+          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!inbox && session || loading")
+          md-list.standalone(ng-show="inbox && inbox.length > 0 || !loading")
+            md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in inbox",ng-click="loadProduct(suggestion.product)")
+              img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
+              .md-list-item-text
+                  h3 {{ suggestion.product.name }}
+                  p 
+                    | {{ suggestion.product.producer_name }}
+                    br
+                    span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
+                    span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
+          .full(layout="column", ng-show="error || !session || inbox && inbox.length === 0 && !error && session",layout-align="center center")
+            div(flex,ng-if="error",layout="column", layout-align="center center")
+              img.watchlist-image(src="img/watchlist.png")
+              p.message {{ error.data }}
+              md-button.md-primary(ng-click="go('welcome')") Okay
+      md-tab(md-on-select="modeSelect(1)")
+        md-tab-label Sent
+        md-tab-body
+          md-progress-circular.md-accent(md-mode="indeterminate",ng-show="!outbox && session || loading")
+          md-list.standalone(ng-show="outbox && outbox.length > 0 || !loading")
+            md-list-item.md-2-line.velocity-transition-slideUpIn(md-no-ink,data-velocity-opts="{ stagger: 125, duration: 250 }",ng-repeat="suggestion in outbox",ng-click="loadProduct(suggestion.product)")
+              img.md-avatar(ng-src="{{ suggestion.product.image_thumb_url }}")
+              .md-list-item-text
+                  h3 {{ suggestion.product.name }}
+                  p 
+                    | {{ suggestion.product.producer_name }}
+                    br
+                    span {{ suggestion.product.secondary_category }} &#183; {{ suggestion.product.alcohol_content | percentage }} &#183;
+                    span.accent &nbsp;Suggested by {{ suggestion.creator_details.firstName }}
+          .full(layout="column", ng-show="error || !session || outbox && outbox.length === 0 && !error && session",layout-align="center center")
+            div(flex,ng-if="error",layout="column", layout-align="center center")
+              img.watchlist-image(src="img/watchlist.png")
+              p.message {{ error.data }}
+              md-button.md-primary(ng-click="go('welcome')") Okay
