update: tab height set

--- a/src/elsie.core/templates/suggestions.jade
+++ b/src/elsie.core/templates/suggestions.jade
@@ -1,7 +1,7 @@
 doctype
 .watchlist
   md-content
-    md-tabs#tabs(md-stretch-tabs="always",ng-style="tabsStyle")
+    md-tabs#tabs(md-stretch-tabs="always")
       md-tab(md-on-select="modeSelect(0)")
         md-tab-label Inbox
         md-tab-body
