--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -5,7 +5,7 @@ doctype
     md-toolbar.lower
       .md-toolbar-tools
   #product-dial(layout="row",layout-align="center center")
-    md-fab-speed-dial.md-scale(md-direction="left",)
+    md-fab-speed-dial.md-scale(md-direction="left",aria-label="Menu")
       md-fab-trigger
         md-button.md-fab#md-fab
           md-icon menu
