--- a/src/elsie.product/templates/product.jade
+++ b/src/elsie.product/templates/product.jade
@@ -8,7 +8,7 @@ doctype
     md-fab-speed-dial.md-scale(md-direction="left",aria-label="Menu")
       md-fab-trigger
         md-button.md-fab#md-fab
-          md-icon menu
+          md-icon add
       md-fab-actions
         md-button.md-fab.md-raised.md-mini(aria-label="Favourite",ng-click="toggleWatch(product)")
           md-icon(ng-if="isWatched") favorite
